[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/ankylosaurus.png" type="Texture" id=1]
[ext_resource path="res://Ankylosaur.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.0897, 16.5055 )

[node name="Ankylosaur" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.32549, 0.572549, 0.137255, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EvasivePattern" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Ankylosaur_body_entered"]
[connection signal="timeout" from="EvasivePattern" to="." method="_on_EvasivePattern_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
